# ezcaptions-api-2

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  burning.py  config.py  database.py  main.py  models.py  repository.py  storage.py  transcription.py
tests/: conftest.py  test_burning.py  test_main.py  test_models.py  test_repository.py  test_storage.py  test_transcription.py
